# amouse

./: .gitignore  README.md
diagrams/: README.md
diagrams/amouse-kicad/: amouse-cache.lib  amouse.kicad_pcb  amouse.pro  amouse.sch  amouse_maleserial.sch
linux/: Makefile
linux/src/: amouse.c
linux/src/include/: serial.c  serial.h  storage.c  storage.h  utils.c  utils.h  version.h  wrappers.c  wrappers.h
pico/: CMakeLists.txt  amouse.c  tusb_config.h
pico/include/: serial.c  serial.h  storage.c  storage.h  usb.c  usb.h  utils.c  utils.h  version.h  wrappers.c  wrappers.h
shared/: console.c  console.h  mouse.c  mouse.h  mouse_defs.h  settings.c  settings.h  utils.c  utils.h
shared/crc8/: LICENSE  README.md  crc8.h  libcrc8.c
tests/: CMakeLists.txt  Makefile  notes.txt  settings-tests.cc
tests/src/: settings-tests.cc
